--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -36,3 +36,15 @@
     transform: rotate(360deg);
   }
 }
+
+.main {
+  padding-top: 30px;
+}
+
+.invisible {
+  display: none;
+}
+
+.visible {
+  display: inline;
+}
