--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -32,6 +32,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
@@ -39,6 +40,11 @@
 
 .main {
   padding-top: 30px;
+}
+
+.data_field {
+  min-height: 100vh;
+  margin-bottom: 30px;
 }
 
 .invisible {
