--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -45,6 +45,8 @@
 .data_field {
   min-height: 100vh;
   margin-bottom: 30px;
+  display: flex;
+  justify-content: flex-end
 }
 
 .invisible {
@@ -53,4 +55,9 @@
 
 .visible {
   display: inline;
+}
+.content_holder {
+  width: 100%;
+  display:flex; 
+  flex-direction:row;
 }
